--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ The versions of the project are:
 Version 1: Intital Release
 </h1>
 <h1>
-Version 2: IN DEVELOPMENT
+Version 2: In Version 2, issue <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/issues/2">#2</a> was fixed along with other general improvements to the code.
 </h2>
 </p>
 <p>
@@ -32,6 +32,14 @@ Version 1 for VWii
 <h1>
 <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/download/v1.0/BASE.zip" download>
 Version 1 BASE installation
+</a>
+</h1>
+</p>
+<p>
+Version 2 release page:
+<h1>
+<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/tag/v2">
+Link
 </a>
 </h1>
 </p>
