--- a/index.html
+++ b/index.html
@@ -19,19 +19,11 @@ Version 2: In Version 2, issue <a href="https://github.com/Mattamech/Wii-or-VWii
 </p>
 <p>
 Downloads:
+<p>
+Version 1 release page:
 <h1>
-<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/download/v1.0/Wii_Homebrew_Downloader.zip" download>
-Version 1 for Wii
-</a>
-</h1>
-<h1>
-<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/download/v1.0/VWii_Homebrew_Downloader.zip" download>
-Version 1 for VWii
-</a>
-</h1>
-<h1>
-<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/download/v1.0/BASE.zip" download>
-Version 1 BASE installation
+<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/tag/v1.0">
+Link
 </a>
 </h1>
 </p>
