--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ The versions of the project are:
 Version 1: Intital Release
 </h1>
 <h1>
-Version 2: In Version 2, issue <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/issues/2">#2</a> was fixed along with other general improvements to the code.
+Version 2: In Version 2, issue <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/issues/2" target="_blank">#2</a> was fixed along with other general improvements to the code.
 </h2>
 </p>
 <p>
@@ -22,7 +22,7 @@ Downloads:
 <p>
 Version 1 release page:
 <h1>
-<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/tag/v1.0">
+<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/tag/v1.0" target="_blank">
 Link
 </a>
 </h1>
@@ -30,13 +30,13 @@ Link
 <p>
 Version 2 release page:
 <h1>
-<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/tag/v2">
+<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/tag/v2" target="_blank">
 Link
 </a>
 </h1>
 </p>
 <p>
-If you encounter any problems, please refer to <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/wiki"> the wiki.</a>
+If you encounter any problems, please refer to <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/wiki" target="_blank"> the wiki.</a>
 </p>
 </body>
 </html>
