Update the old html
It was pretty old so I updated it.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@ Version 1: Intital Release
 </h1>
 <h1>
 Version 2: In Version 2, issue <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/issues/2" target="_blank">#2</a> was fixed along with other general improvements to the code.
-</h2>
+</h1>
+<h1>
+All other releases can be found <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases" target="_blank">here.</a>
+</h1>
 </p>
 <p>
 Downloads:
@@ -34,6 +37,15 @@ Version 2 release page:
 Link
 </a>
 </h1>
+</p>
+<p>
+Latest release:    
+<h1>
+<a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/releases/latest" target="_blank">
+Link
+</a>
+</h1>
+</p>
 </p>
 <p>
 If you encounter any problems, please refer to <a href="https://github.com/Mattamech/Wii-or-VWii-Homebrew-Installer/wiki" target="_blank"> the wiki.</a>
